--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ ul {
     /** Handling Menu UI for Mobile Devices */
     @media only screen and (max-width:550px) {
         flex-direction: column;
+        gap: 20px;
     }
 }
 
